Fix size change on Header on mobile org page

--- a/client/public/css/custom-responsive.css
+++ b/client/public/css/custom-responsive.css
@@ -511,7 +511,8 @@
   }
   .org-edit-button {
     text-align: center !important;
-    left: 25% !important;
+    left: 0% !important;
+    height: 40px;
   }
   .irb-bottom {
     position: fixed !important;
@@ -579,6 +580,14 @@
       padding: 0px;
       font-size: 17px;
   }
+  .org-edit-button .button-edit{
+    left: 37%!important ;
+    position: absolute!important;
+  }
+  .team-edit-button .org-edit-button .button-edit{
+    position: initial!important;
+  }
+
 }
 
 @media screen and (max-width: 414px) {
@@ -637,9 +646,9 @@
   .player__video_2, .player__video {
     height: 170px!important;
   }
-  .team-edit-button .org-edit-button {  
+  /*.team-edit-button .org-edit-button {  
     left: -6% !important;
-  }
+  }*/
 }
 
 @media screen and (max-width: 412px) {
